[gd_scene load_steps=8 format=3 uid="uid://b23aj0fsxbgap"]

[ext_resource type="Script" path="res://scenes/menus/control_menu.gd" id="1_euyg0"]
[ext_resource type="FontFile" uid="uid://dflgosesmjvf" path="res://assets/common/fonts/MYRIADPRO-BOLD.OTF" id="2_wk86u"]
[ext_resource type="FontFile" uid="uid://b87hanxewtnrb" path="res://assets/common/fonts/MYRIADPRO-BOLDCOND.OTF" id="4_cg2fi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8m74l"]
bg_color = Color(0.131587, 0.159062, 0.305638, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gflx1"]
font = ExtResource("2_wk86u")
font_size = 42
outline_size = 4
outline_color = Color(1, 0.603922, 0.176471, 1)

[sub_resource type="LabelSettings" id="LabelSettings_iqfvl"]
font = ExtResource("2_wk86u")
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_fxa8b"]
font = ExtResource("2_wk86u")
font_size = 30

[node name="ControlMenu" type="CanvasLayer"]
script = ExtResource("1_euyg0")

[node name="KeybindsMenuContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -326.0
offset_top = -287.0
offset_right = 484.0
offset_bottom = 431.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 0
size_flags_vertical = 2
theme_override_constants/margin_left = 115
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 115
theme_override_constants/margin_bottom = 65

[node name="Panel" type="Panel" parent="KeybindsMenuContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8m74l")

[node name="MarginContainer" type="MarginContainer" parent="KeybindsMenuContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 27
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 28

[node name="LeftButtonsVBox" type="VBoxContainer" parent="KeybindsMenuContainer/MarginContainer"]
custom_minimum_size = Vector2(500, 550)
layout_mode = 2
theme_override_constants/separation = 20

[node name="HeaderLabel" type="Label" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox"]
custom_minimum_size = Vector2(0, 46.865)
layout_mode = 2
text = "Controls"
label_settings = SubResource("LabelSettings_gflx1")
horizontal_alignment = 1

[node name="ResetContainer" type="HBoxContainer" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ResetLabel" type="Label" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/ResetContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
text = "Reset"
label_settings = SubResource("LabelSettings_iqfvl")

[node name="ResetKeyButton" type="Button" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/ResetContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
theme_override_font_sizes/font_size = 18
text = "R"

[node name="SprintContainer" type="HBoxContainer" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SprintLabel" type="Label" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/SprintContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
text = "Sprint"
label_settings = SubResource("LabelSettings_iqfvl")

[node name="SprintKeyButton" type="Button" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/SprintContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
theme_override_font_sizes/font_size = 18
text = "1"

[node name="ArmsContainer" type="HBoxContainer" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ArmsLabel" type="Label" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/ArmsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Arm's Length"
label_settings = SubResource("LabelSettings_iqfvl")

[node name="ArmsKeyButton" type="Button" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/ArmsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
theme_override_font_sizes/font_size = 18
text = "2"

[node name="DashContainer" type="HBoxContainer" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="DashLabel" type="Label" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/DashContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "En Avant (Dash)"
label_settings = SubResource("LabelSettings_iqfvl")

[node name="DashKeyButton" type="Button" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/DashContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 18
text = "3"

[node name="MouseSensContainer" type="HBoxContainer" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="MouseSensLabel" type="Label" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/MouseSensContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Mouse Sensitivity"
label_settings = SubResource("LabelSettings_iqfvl")

[node name="MouseSensHSlider" type="HSlider" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/MouseSensContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(190, 28)
layout_mode = 2
size_flags_horizontal = 10
min_value = 0.4
max_value = 2.5
step = 0.01
value = 1.0

[node name="Label" type="Label" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox"]
custom_minimum_size = Vector2(0, 44.135)
layout_mode = 2
text = "Controller Options:"
label_settings = SubResource("LabelSettings_fxa8b")
vertical_alignment = 2

[node name="XSensContainer" type="HBoxContainer" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="XSensLabel" type="Label" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/XSensContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "X Sensitivity"
label_settings = SubResource("LabelSettings_iqfvl")

[node name="XSensHSlider" type="HSlider" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/XSensContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(190, 28)
layout_mode = 2
size_flags_horizontal = 10
min_value = 0.5
max_value = 1.5
step = 0.01
value = 1.0

[node name="YSensContainer2" type="HBoxContainer" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="YSensLabel" type="Label" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/YSensContainer2"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Y Sensitivity"
label_settings = SubResource("LabelSettings_iqfvl")

[node name="YSensHSlider" type="HSlider" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/YSensContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(190, 28)
layout_mode = 2
size_flags_horizontal = 10
min_value = 0.5
max_value = 1.5
step = 0.01
value = 1.0

[node name="InvertYContainer" type="HBoxContainer" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox"]
layout_mode = 2
theme_override_constants/separation = 57

[node name="InvertYLabel" type="Label" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/InvertYContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Invert Y"
label_settings = SubResource("LabelSettings_iqfvl")

[node name="InvertYCheckButton" type="CheckButton" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/InvertYContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6

[node name="BottomHBoxContainer" type="HBoxContainer" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox"]
layout_mode = 2
size_flags_vertical = 10

[node name="BackButton" type="Button" parent="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/BottomHBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("4_cg2fi")
theme_override_font_sizes/font_size = 42
text = "Close"

[connection signal="pressed" from="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/ResetContainer/ResetKeyButton" to="." method="_on_reset_key_button_pressed"]
[connection signal="pressed" from="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/SprintContainer/SprintKeyButton" to="." method="_on_sprint_key_button_pressed"]
[connection signal="pressed" from="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/ArmsContainer/ArmsKeyButton" to="." method="_on_arms_key_button_pressed"]
[connection signal="pressed" from="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/DashContainer/DashKeyButton" to="." method="_on_dash_key_button_pressed"]
[connection signal="drag_ended" from="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/MouseSensContainer/MouseSensHSlider" to="." method="_on_mouse_sens_h_slider_drag_ended"]
[connection signal="drag_ended" from="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/XSensContainer/XSensHSlider" to="." method="_on_x_sens_h_slider_drag_ended"]
[connection signal="drag_ended" from="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/YSensContainer2/YSensHSlider" to="." method="_on_y_sens_h_slider_drag_ended"]
[connection signal="toggled" from="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/InvertYContainer/InvertYCheckButton" to="." method="_on_invert_y_check_button_toggled"]
[connection signal="pressed" from="KeybindsMenuContainer/MarginContainer/LeftButtonsVBox/BottomHBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
